--- a/pagician-extension/sidepanel/sidepanel.html
+++ b/pagician-extension/sidepanel/sidepanel.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagician</title>
-  <link rel="stylesheet" href="popup.css">
+  <link rel="stylesheet" href="sidepanel.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Voice DOM Controller</h1>
-      <div class="status-indicator" id="statusIndicator">
-        <span class="status-dot"></span>
-        <span class="status-text">Inactive</span>
-      </div>
-    </header>
+  <header>
+    <h1>Pagician</h1>
+    <div class="status-indicator" id="statusIndicator">
+      <span class="status-dot"></span>
+      <span class="status-text">Inactive</span>
+    </div>
+  </header>
 
-    <main>
+  <main>
+    <div class="controls">
       <div class="control-section">
         <button id="toggleBtn" class="toggle-btn">
-          <svg class="mic-icon" viewBox="0 0 24 24" width="24" height="24">
+          <svg class="mic-icon" viewBox="0 0 24 24" width="20" height="20">
             <path fill="currentColor" d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"/>
             <path fill="currentColor" d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
           </svg>
@@ -32,6 +32,11 @@
         <span class="api-text">API Key Status</span>
       </div>
 
+      <div class="permission-status" id="permissionStatus">
+        <div class="permission-indicator"></div>
+        <span class="permission-text">Microphone: Not requested</span>
+      </div>
+
       <div class="usage-status" id="usageStatus" style="display: none;">
         <div class="usage-progress">
           <div class="usage-bar" id="usageBar"></div>
@@ -39,48 +44,32 @@
         <span class="usage-text" id="usageText">Trial: 0/100 requests used</span>
       </div>
 
-      <div class="permission-status" id="permissionStatus">
-        <div class="permission-indicator"></div>
-        <span class="permission-text">Microphone: Not requested</span>
-      </div>
-
       <div class="limit-warning" id="limitWarning" style="display: none;">
-        <p>⚠️ Trial limit reached!</p>
+        <p>Trial limit reached!</p>
         <button class="btn-upgrade" id="upgradeBtn">Add Your API Key</button>
-      </div>
-
-      <div class="instructions">
-        <h2>How to use:</h2>
-        <ol>
-          <li>Click "Start Voice Control" or use keyboard shortcut</li>
-          <li>Hover over any element on the page</li>
-          <li>Speak your command naturally</li>
-          <li>Watch the element change instantly</li>
-        </ol>
-
-        <div class="commands">
-          <h3>Example Commands:</h3>
-          <ul>
-            <li>"Make it red" - Changes color</li>
-            <li>"Make it bigger" - Increases size</li>
-            <li>"Hide it" - Hides the element</li>
-            <li>"Make it transparent" - Changes opacity</li>
-            <li>"Add a shadow" - Adds drop shadow</li>
-            <li>"Rotate it" - Rotates element</li>
-          </ul>
-        </div>
       </div>
 
       <div class="settings-link">
         <button id="settingsBtn" class="settings-btn">
-          <svg viewBox="0 0 24 24" width="18" height="18">
+          <svg viewBox="0 0 24 24" width="16" height="16">
             <path fill="currentColor" d="M12 15.5A3.5 3.5 0 0 1 8.5 12A3.5 3.5 0 0 1 12 8.5a3.5 3.5 0 0 1 3.5 3.5a3.5 3.5 0 0 1-3.5 3.5m7.43-2.53c.04-.32.07-.64.07-.97c0-.33-.03-.65-.07-.97l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.08-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.32-.07.64-.07.97c0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z"/>
           </svg>
           Settings
         </button>
       </div>
-    </main>
-  </div>
-  <script src="popup.js"></script>
+    </div>
+
+    <div class="log-section">
+      <div class="log-header">
+        <span class="log-title">Activity Log</span>
+        <button id="clearLogBtn" class="clear-btn">Clear</button>
+      </div>
+      <div class="log-container" id="logContainer">
+        <div class="log-empty">Activity will appear here when voice control is active.</div>
+      </div>
+    </div>
+  </main>
+
+  <script src="sidepanel.js"></script>
 </body>
 </html>
